--- a/poster/.env.sample
+++ b/poster/.env.sample
@@ -1,3 +1,8 @@
 # Django settings
 SECRET_KEY=
 DEBUG=
+# A string representing the host/domain names that this Django site can serve. For example: localhost,127.0.0.1
+ALLOWED_HOSTS=
+
+# Environment type: prod or local
+ENV_TYPE=
